--- a/README
+++ b/README
@@ -18,9 +18,9 @@ Purpose:
 
 This script does not require the use of PSU Blast Image Config, and can easily be adapted to different environments on OS X.
 
-It's intended to run after the main system image has been restored, then create (if one doesn't already exist) create a new 650 MB 'Recovery HD' partition, restore a pre-existing Recovery HD system disk image, and then change the partition type to 'Apple_Boot' via asr's 'adjust' verb.
+It's intended to run after the main system image has been restored, then create (if one doesn't already exist) a new 650 MB 'Recovery HD' partition, restore a pre-existing Recovery HD system disk image, and then change the partition type to 'Apple_Boot' via asr's 'adjust' verb.
 
-The script requires numerous input arguements, which are documented in the script's usage subroutine. The script must be ran with sudo or as the root user.
+The script requires numerous input arguements, which are documented in the script's usage subroutine. The script must be run with sudo or as the root user.
 
 If you make any cool/useful changes to this script, I'm always interested in hearing about them!
 
